--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IOTA Testnet Publisher</title>
   <script src="https://cdn.jsdelivr.net/npm/@iota/sdk/web.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; }
+    body { font-family: Arial, sans-serif; margin: 40px; max-width: 600px; }
     label { font-weight: bold; }
-    input, textarea { width: 100%; margin-bottom: 20px; }
+    input, textarea { width: 100%; margin-bottom: 20px; padding: 8px; }
     button { padding: 10px 20px; font-size: 16px; }
     #qr { margin-top: 20px; }
+    a { word-break: break-all; }
   </style>
 </head>
 <body>
-  <h2>Publish to IOTA Testnet</h2>
+  <h2>Publish to IOTA Testnet using Shimmer</h2>
   <form id="iotaForm">
     <label for="tag">Tag:</label>
-    <input type="text" id="tag" name="tag" required>
+    <input type="text" id="tag" name="tag" required />
 
     <label for="data">Data:</label>
     <textarea id="data" name="data" rows="4" required></textarea>
