--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <label for="data">Data:</label>
     <textarea id="data" name="data" rows="4" required></textarea>
 
-    <button type="submit">Send to IOTA</button>
+    <button type="submit">Send to IOTA using Shimmer</button>
   </form>
 
   <div id="status"></div>
