--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     import { Client } from 'https://cdn.jsdelivr.net/npm/@iota/sdk/web.js';
 
     const client = new Client({
-      nodes: ['https://api.testnet.iotaledger.net'],
+      nodes: ['https://rpc.ankr.com/iota_testnet'],
     });
 
     async function checkConnection() {
