--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IOTA Testnet Publisher</title>
+  <script src="https://cdn.jsdelivr.net/npm/@iota/sdk/web.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; margin: 40px; max-width: 600px; }
@@ -30,9 +31,23 @@
   <div id="status"></div>
   <canvas id="qr"></canvas>
 
-  <script>
-    const nodeUrl = "https://api.testnet.iotaledger.net"; // Hornet node with REST API
-    const explorerBase = "https://explorer.iotaledger.net/testnet/block/";
+  <script type="module">
+    import { Client } from 'https://cdn.jsdelivr.net/npm/@iota/sdk/web.js';
+
+    const client = new Client({
+      nodes: ['https://api.testnet.iotaledger.net'],
+    });
+
+    async function checkConnection() {
+      try {
+        await client.getInfo();
+        return true;
+      } catch (err) {
+        console.error("API connection failed:", err);
+        document.getElementById('status').innerText = "❌ Cannot connect to IOTA testnet API. Please try again later.";
+        return false;
+      }
+    }
 
     document.getElementById('iotaForm').addEventListener('submit', async (e) => {
       e.preventDefault();
@@ -41,33 +56,17 @@
       const timestamp = new Date().toISOString();
       const payload = `${data}\n\n[timestamp: ${timestamp}]`;
 
-      const block = {
-        protocolVersion: 2,
-        parents: [],
-        payload: {
-          type: 2,
-          tag: btoa(tag),
-          data: btoa(payload)
-        },
-        nonce: "0"
-      };
+      const connected = await checkConnection();
+      if (!connected) return;
 
       try {
-        const tipsRes = await fetch(`${nodeUrl}/api/core/v2/tips`);
-        const tips = await tipsRes.json();
-        block.parents = tips.tips;
-
-        const powRes = await fetch(`${nodeUrl}/api/core/v2/block`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(block)
+        const block = await client.buildAndPostBlock({
+          tag: tag,
+          data: new TextEncoder().encode(payload),
         });
 
-        if (!powRes.ok) throw new Error("Block submission failed");
-
-        const result = await powRes.json();
-        const blockId = result.blockId;
-        const explorerUrl = explorerBase + blockId;
+        const blockId = block.blockId;
+        const explorerUrl = `https://explorer.iotaledger.net/testnet/block/${blockId}`;
 
         document.getElementById('status').innerHTML = `
           ✅ Block sent!<br>
@@ -76,13 +75,13 @@
 
         QRCode.toCanvas(document.getElementById('qr'), explorerUrl, function (error) {
           if (error) {
-            console.error("QR Code error:", error);
-            document.getElementById('status').innerHTML += "<br>⚠️ QR code generation failed.";
+            console.error("QR Code generation error:", error);
+            document.getElementById('status').innerHTML += "<br>⚠️ Failed to generate QR code.";
           }
         });
       } catch (err) {
-        console.error("Error:", err);
-        document.getElementById('status').innerText = "❌ Failed to send block. Check your connection or try again later.";
+        console.error("Block submission error:", err);
+        document.getElementById('status').innerText = "❌ Failed to send block. Please check your input or try again later.";
       }
     });
   </script>
