--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <script>
     const nodeUrl = "https://api.testnet.iotaledger.net";
-    const explorerBase = "https://explorer.iotaledger.net/testnet/message/";
+    const explorerBase = "https://explorer.iotaledger.net/testnet/block/";
 
     document.getElementById('iotaForm').addEventListener('submit', async (e) => {
       e.preventDefault();
@@ -41,29 +41,39 @@
       const timestamp = new Date().toISOString();
       const payload = `${data}\n\n[timestamp: ${timestamp}]`;
 
-      const message = {
-        payload: {
-          type: 2,
-          index: btoa(tag),
-          data: btoa(payload)
-        }
-      };
-
       try {
-        const res = await fetch(`${nodeUrl}/api/core/v2/messages`, {
+        // Get tips (parents)
+        const tipsRes = await fetch(`${nodeUrl}/api/core/v2/tips`);
+        const tips = await tipsRes.json();
+        const parents = tips.tips;
+
+        // Build block
+        const block = {
+          protocolVersion: 2,
+          parents: parents,
+          payload: {
+            type: 2,
+            tag: btoa(tag),
+            data: btoa(payload)
+          },
+          nonce: "0"
+        };
+
+        // Submit block
+        const res = await fetch(`${nodeUrl}/api/core/v2/block`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(message)
+          body: JSON.stringify(block)
         });
 
-        if (!res.ok) throw new Error("Message submission failed");
+        if (!res.ok) throw new Error("Block submission failed");
 
         const result = await res.json();
-        const messageId = result.messageId;
-        const explorerUrl = explorerBase + messageId;
+        const blockId = result.blockId;
+        const explorerUrl = explorerBase + blockId;
 
         document.getElementById('status').innerHTML = `
-          ✅ Message sent!<br>
+          ✅ Block sent!<br>
           🔗 <a href="${explorerUrl}" target="_blank">${explorerUrl}</a>
         `;
 
@@ -75,7 +85,7 @@
         });
       } catch (err) {
         console.error("Error:", err);
-        document.getElementById('status').innerText = "❌ Failed to send message. Check your connection or try again later.";
+        document.getElementById('status').innerText = "❌ Failed to send block. Check your connection or try again later.";
       }
     });
   </script>
