--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title>IOTA Rebased Testnet Publisher</title>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; max-width: 600px; }
+    body { font-family: Arial, sans-serif; margin: 40px; max-width: 700px; }
     label { font-weight: bold; }
     input, textarea { width: 100%; margin-bottom: 20px; padding: 8px; }
     button { padding: 10px 20px; font-size: 16px; }
     #qr { margin-top: 20px; }
     a { word-break: break-word; }
     #status { margin-top: 20px; font-weight: bold; white-space: pre-wrap; }
+    #debug { margin-top: 30px; background: #f4f4f4; padding: 15px; border: 1px solid #ccc; font-family: monospace; white-space: pre-wrap; }
   </style>
 </head>
 <body>
@@ -29,6 +30,9 @@
 
   <div id="status"></div>
   <canvas id="qr"></canvas>
+
+  <h3>🔍 Debug Payload</h3>
+  <div id="debug">(waiting for submission...)</div>
 
   <script>
     const nodeUrl = "https://api.testnet.iotaledger.net";
@@ -65,6 +69,9 @@
           },
           nonce: "0"
         };
+
+        // Show debug payload
+        document.getElementById('debug').textContent = JSON.stringify(block, null, 2);
 
         // Step 3: Submit block
         const res = await fetch(`${nodeUrl}/api/core/v2/block`, {
